media/base/video_facing.h
@@ -8,6 +8,8 @@
 namespace media {
 
 // Facing mode for video capture.
+// A Java counterpart will be generated for this enum.
+// GENERATED_JAVA_ENUM_PACKAGE: org.chromium.media
 enum VideoFacingMode {
   MEDIA_VIDEO_FACING_NONE = 0,
   MEDIA_VIDEO_FACING_USER,
